# insurance-rag

./: .env  .gitignore  CLAUDE.md  DEPLOYMENT_CHECKLIST.md  DEPLOYMENT_READY.md  Dockerfile  Loom Video Link.md  PROJECT_FILES_ANALYSIS.md  RAGAS_GENERATED_RESULTS.md  RAGAS_RESULTS_TABLE.md  RAGAS_TUTORIAL.md  README.md  RETRIEVAL_COMPARISON_REPORT.md  Task 1.md  Task 2.md  Task 3.md  Task 4.md  Task 5.md  Task 6.md  Task 7.md  adjuster_agent.py  analyze_retrieval_failure.py  automated_test_runner.py  create_ragas_dataset.py  debug_adjuster_agent.py  debug_claims.py  debug_session_20250803_202723.json  debug_test.py  demo_new_features.py  demo_ragas_results.csv  demo_results_table.py  deployment_structure.md  docker-compose.yml  enhanced_adjuster_agent.py  enhanced_rag.py  enhanced_streamlit_app.py  enhanced_test_questions.csv  evaluate_rag.py  evaluate_with_ragas_dataset.py  financial_agent.py  (+33 more)
archive/: debug_session_20250803_202532.json
data/: insurance_claims.csv
templates/: dashboard.html
