[project]
name = "insurance-rag"
version = "0.2.0"
requires-python = ">=3.10"
dependencies = [
    # Core RAG dependencies (existing)
    "langchain>=0.3.0",
    "langchain-openai>=0.2.0",
    "langchain-community>=0.3.0",
    "qdrant-client>=1.7.0",
    "pandas>=2.0.0",
    "python-dotenv>=1.0.0",
    
    # New Agentic dependencies
    "langgraph>=0.2.0",           # For building agents
    "tavily-python>=0.3.0",       # For web search
    "ragas>=0.1.0",               # For RAG evaluation
    "langsmith>=0.1.0",           # For monitoring
    
    # Query enhancement
    "langchain-cohere>=0.1.0",    # For reranking (optional)
    "rank-bm25>=0.2.0",           # For keyword search
    
    # Helpful additions
    "rich>=13.0.0",               # Pretty console output
    "typer>=0.9.0",               # CLI interface
]

[tool.uv]
dev-dependencies = [
    "ipykernel>=6.0.0",          # For Jupyter
    "pytest>=7.0.0",             # For testing
]